--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -24,20 +24,31 @@
     .header-text h1 { margin:0; font-size:28px; }
     .header-text p { margin:6px 0 0; opacity:0.9; }
 
-    main { max-width:1200px; margin:25px auto 40px; padding:0 20px; }
+    main { max-width:1200px; margin:20px auto 40px; padding:0 20px; }
     .search-card { background:var(--card); border-radius:12px; padding:24px; box-shadow:0 10px 30px rgba(0,0,0,0.08); margin-bottom:30px; }
-    .search-grid { display:grid; grid-template-columns:repeat(auto-fit,minmax(220px,1fr)); gap:20px; }
+    
+    /* Zmienione na flex dla mobile, grid dla desktop */
+    .search-grid { display: grid; grid-template-columns: repeat(auto-fit,minmax(220px,1fr)); gap:20px; }
+    @media(max-width:600px) {
+      .search-grid { display: flex; flex-direction: column; gap:12px; }
+    }
+
     label { display:block; font-size:14px; margin-bottom:6px; color:var(--muted); }
-    select, button { width:100%; padding:12px; font-size:15px; border-radius:8px; border:1px solid #d1d5db; }
+    select, button { width:100%; min-width:0; padding:12px; font-size:15px; border-radius:8px; border:1px solid #d1d5db; }
     button { background-color: var(--primary); color:white; border:none; cursor:pointer; font-weight:bold; }
     button:hover { opacity:0.9; }
-    .results-card { background: var(--card); border-radius:12px; padding:20px; box-shadow:0 6px 20px rgba(0,0,0,0.06); }
-    table { width:100%; border-collapse:collapse; }
+
+    .results-card { background: var(--card); border-radius:12px; padding:20px; box-shadow:0 6px 20px rgba(0,0,0,0.06); overflow-x:auto; }
+    table { width:100%; border-collapse:collapse; min-width:400px; }
     th, td { padding:14px 10px; text-align:left; border-bottom:1px solid #e5e7eb; }
     th { font-size:14px; color:var(--muted); }
     .stars { color:#f5b301; font-size:16px; }
     .empty { text-align:center; padding:30px; color:var(--muted); }
-    @media(max-width:600px) { .header-container { flex-direction:column; align-items:flex-start; } }
+    
+    @media(max-width:600px) { 
+      .header-container { flex-direction:column; align-items:flex-start; } 
+      table, th, td { font-size:13px; padding:8px 6px; }
+    }
   </style>
 </head>
 <body>
@@ -57,13 +68,13 @@
     <div class="search-grid">
       <div>
         <label>Województwo</label>
-        <select id="wojewodztwo">
+        <select id="wojewodztwo" onchange="loadMiasta()" oninput="loadMiasta()">
           <option value="">-- wybierz --</option>
         </select>
       </div>
       <div>
         <label>Miasto</label>
-        <select id="miasto" disabled>
+        <select id="miasto" disabled onchange="szukaj()" oninput="szukaj()">
           <option value="">-- wybierz --</option>
         </select>
       </div>
@@ -115,38 +126,37 @@ async function loadWojewodztwa() {
 }
 
 // Wczytaj miasta po województwie
-wojSelect.addEventListener('change', async () => {
-  const wojId = wojSelect.value.trim()
-  console.log('Wybrano województwo ID:', wojId)
+window.loadMiasta = async function() {
+  const wojId = wojSelect.value
+  console.log('Wybrano województwo ID:', wojId)  
   miastoSelect.innerHTML = '<option value="">-- wybierz --</option>'
   miastoSelect.disabled = true
   if (!wojId) return
 
   const { data, error } = await supabase.from('miasta')
     .select('id,nazwa')
-    .eq('wojewodztwo_id', parseInt(wojId))
+    .eq('wojewodztwo_id', wojId)
     .order('nazwa')
   if (error) { console.error(error); return }
 
   data.forEach(m => {
     const option = document.createElement('option')
-    option.value = m.id  // używamy ID
+    option.value = m.id
     option.textContent = m.nazwa
     miastoSelect.appendChild(option)
   })
   miastoSelect.disabled = false
-  console.log('Załadowano miasta:', data)
-})
+  console.log('Załadowano miasta:', data)  
+}
 
 async function szukaj() {
-  const wojIdNum = parseInt(wojSelect.value.trim())
-  const miastoIdNum = parseInt(miastoSelect.value.trim())
+  const wojId = wojSelect.value
+  const miastoId = miastoSelect.value
   tbody.innerHTML = ''
 
-  console.log('Szukam dla województwa ID:', wojIdNum, 'miasto ID:', miastoIdNum)
-  console.log('Typ wojIdNum:', typeof wojIdNum, 'Typ miastoIdNum:', typeof miastoIdNum)
+  console.log('Szukam dla województwa ID:', wojId, 'miasto ID:', miastoId)  
 
-  if (!wojIdNum || !miastoIdNum) {
+  if (!wojId || !miastoId) {
     empty.textContent = 'Proszę wybrać województwo i miasto'
     empty.style.display = 'block'
     return
@@ -154,10 +164,10 @@ async function szukaj() {
 
   const { data, error } = await supabase.from('tabela_elektrykow')
     .select('imie,nazwisko,email,telefon,gwiazdki')
-    .eq('wojewodztwo', wojIdNum)
-    .eq('miasto', miastoIdNum)
+    .eq('wojewodztwo', wojId)
+    .eq('miasto', miastoId)
 
-  console.log('Wyniki z bazy:', data)
+  console.log('Wyniki z bazy:', data)  
 
   if (error) {
     empty.textContent = 'Błąd pobierania danych: ' + error.message
@@ -178,7 +188,7 @@ async function szukaj() {
       <td>${e.nazwisko}</td>
       <td>${e.email}</td>
       <td>${e.telefon}</td>
-       <td>${e.gwiazdki}</td>
+      <td>${e.gwiazdki}</td>
     `
     tbody.appendChild(tr)
   })
@@ -189,7 +199,6 @@ async function szukaj() {
 // inicjalizacja
 loadWojewodztwa()
 window.szukaj = szukaj
-
 </script>
 </body>
 </html>
