--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -20,9 +20,9 @@
     body { margin:0; font-family: Arial,sans-serif; background:var(--bg); color:var(--text);}
     header { background:linear-gradient(135deg,#0B5FA5,#083f6b); color:white; padding:40px 20px; }
     .header-container { max-width:1200px; margin:0 auto; display:flex; align-items:center; gap:20px; }
-      .logo { width: 55px; display: block; }
-      .header-text h1 { margin:0; font-size:28px; }
-      .header-text p { margin:6px 0 0; opacity:0.9; }
+    .logo { width: 55px; display: block; }
+    .header-text h1 { margin:0; font-size:28px; }
+    .header-text p { margin:6px 0 0; opacity:0.9; }
 
     main { max-width:1200px; margin:20px auto 40px; padding:0 20px; }
     .search-card { background:var(--card); border-radius:12px; padding:24px; box-shadow:0 10px 30px rgba(0,0,0,0.08); margin-bottom:30px; }
@@ -116,7 +116,8 @@ async function loadWojewodztwa() {
 
 // Wczytaj miasta po województwie
 wojSelect.addEventListener('change', async () => {
-  const wojId = wojSelect.value
+  const wojId = Number(wojSelect.value)
+  console.log('Wybrano województwo ID:', wojId)
   miastoSelect.innerHTML = '<option value="">-- wybierz --</option>'
   miastoSelect.disabled = true
   if (!wojId) return
@@ -129,18 +130,25 @@ wojSelect.addEventListener('change', async () => {
 
   data.forEach(m => {
     const option = document.createElement('option')
-    option.value = m.id
+    option.value = Number(m.id)
     option.textContent = m.nazwa
     miastoSelect.appendChild(option)
   })
   miastoSelect.disabled = false
+  console.log('Załadowano miasta:', data)
 })
 
-// Funkcja wyszukiwania
+// Mobilne przeglądarki: zapewniamy, że zmiana wartości jest odczytywana
+miastoSelect.addEventListener('input', () => {
+  console.log('Miasto zmienione:', miastoSelect.value)
+})
+
 async function szukaj() {
-  const wojId = wojSelect.value
-  const miastoId = miastoSelect.value
-  tbody.innerHTML = ''  // Czyścimy tabelę przed dodaniem wyników
+  const wojId = Number(wojSelect.value)
+  const miastoId = Number(miastoSelect.value)
+  tbody.innerHTML = ''
+
+  console.log('Szukam dla województwa ID:', wojId, 'miasto ID:', miastoId)
 
   if (!wojId || !miastoId) {
     empty.textContent = 'Proszę wybrać województwo i miasto'
@@ -152,6 +160,8 @@ async function szukaj() {
     .select('imie,nazwisko,email,telefon,gwiazdki')
     .eq('wojewodztwo', wojId)
     .eq('miasto', miastoId)
+
+  console.log('Wyniki z bazy:', data)
 
   if (error) {
     empty.textContent = 'Błąd pobierania danych: ' + error.message
@@ -180,10 +190,11 @@ async function szukaj() {
   empty.style.display = 'none'
 }
 
-// Inicjalizacja
+// inicjalizacja
 loadWojewodztwa()
 window.szukaj = szukaj
 
 </script>
 </body>
 </html>
+
