--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -1,43 +1,44 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Ogólnopolski Rejestr Elektryków</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ogólnopolski Rejestr Elektryków</title>
 
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/supabase.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
-<style>
-:root {
-  --primary: #0B5FA5;
-  --bg: #f4f6f8;
-  --card: #ffffff;
-  --text: #1c1c1e;
-  --muted: #6b7280;
-}
+  <style>
+    :root {
+      --primary: #0B5FA5;
+      --bg: #f4f6f8;
+      --card: #ffffff;
+      --text: #1c1c1e;
+      --muted: #6b7280;
+    }
 
-* { box-sizing: border-box; }
-body { margin:0; font-family: Arial,sans-serif; background:var(--bg); color:var(--text);}
-header { background:linear-gradient(135deg,#0B5FA5,#083f6b); color:white; padding:40px 20px; }
-.header-container { max-width:1200px; margin:0 auto; display:flex; align-items:center; gap:20px; }
-.logo { width: 55px; display:block; }
-.header-text h1 { margin:0; font-size:28px; }
-.header-text p { margin:6px 0 0; opacity:0.9; }
-main { max-width:1200px; margin:20px auto 40px; padding:0 20px; }
-.search-card { background:var(--card); border-radius:12px; padding:24px; box-shadow:0 10px 30px rgba(0,0,0,0.08); margin-bottom:30px; }
-.search-grid { display:grid; grid-template-columns:repeat(auto-fit,minmax(220px,1fr)); gap:20px; }
-label { display:block; font-size:14px; margin-bottom:6px; color:var(--muted); }
-select, button { width:100%; padding:12px; font-size:15px; border-radius:8px; border:1px solid #d1d5db; }
-button { background-color: var(--primary); color:white; border:none; cursor:pointer; font-weight:bold; }
-button:hover { opacity:0.9; }
-.results-card { background: var(--card); border-radius:12px; padding:20px; box-shadow:0 6px 20px rgba(0,0,0,0.06); }
-table { width:100%; border-collapse:collapse; }
-th, td { padding:14px 10px; text-align:left; border-bottom:1px solid #e5e7eb; }
-th { font-size:14px; color:var(--muted); }
-.stars { color:#f5b301; font-size:16px; }
-.empty { text-align:center; padding:30px; color:var(--muted); }
-@media(max-width:600px) { .header-container { flex-direction:column; align-items:flex-start; } }
-</style>
+    * { box-sizing: border-box; }
+    body { margin:0; font-family: Arial,sans-serif; background:var(--bg); color:var(--text);}
+    header { background:linear-gradient(135deg,#0B5FA5,#083f6b); color:white; padding:40px 20px; }
+    .header-container { max-width:1200px; margin:0 auto; display:flex; align-items:center; gap:20px; }
+      .logo { width: 55px; display: block; }
+    .header-text h1 { margin:0; font-size:28px; }
+    .header-text p { margin:6px 0 0; opacity:0.9; }
+
+    main { max-width:1200px; margin:20px auto 40px; padding:0 20px; }
+    .search-card { background:var(--card); border-radius:12px; padding:24px; box-shadow:0 10px 30px rgba(0,0,0,0.08); margin-bottom:30px; }
+    .search-grid { display:grid; grid-template-columns:repeat(auto-fit,minmax(220px,1fr)); gap:20px; }
+    label { display:block; font-size:14px; margin-bottom:6px; color:var(--muted); }
+    select, button { width:100%; padding:12px; font-size:15px; border-radius:8px; border:1px solid #d1d5db; }
+    button { background-color: var(--primary); color:white; border:none; cursor:pointer; font-weight:bold; }
+    button:hover { opacity:0.9; }
+    .results-card { background: var(--card); border-radius:12px; padding:20px; box-shadow:0 6px 20px rgba(0,0,0,0.06); }
+    table { width:100%; border-collapse:collapse; }
+    th, td { padding:14px 10px; text-align:left; border-bottom:1px solid #e5e7eb; }
+    th { font-size:14px; color:var(--muted); }
+    .stars { color:#f5b301; font-size:16px; }
+    .empty { text-align:center; padding:30px; color:var(--muted); }
+    @media(max-width:600px) { .header-container { flex-direction:column; align-items:flex-start; } }
+  </style>
 </head>
 <body>
 
@@ -67,7 +68,7 @@ th { font-size:14px; color:var(--muted); }
         </select>
       </div>
       <div style="align-self:end;">
-        <button id="szukajBtn">Szukaj</button>
+        <button onclick="szukaj()">Szukaj</button>
       </div>
     </div>
   </div>
@@ -89,107 +90,99 @@ th { font-size:14px; color:var(--muted); }
   </div>
 </main>
 
-<script>
-document.addEventListener('DOMContentLoaded', function() {
+<script type="module">
+import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm'
 
-  const SUPABASE_URL = "https://tfbqqduxtsacvwfigsvt.supabase.co";
-  const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY2OTE4NzcsImV4cCI6MjA4MjI2Nzg3N30.PhuNnwzQ8cZW_UyUjCxXaYAj7xCCiTnOJVd4fUtQRD8";
+const SUPABASE_URL = "https://tfbqqduxtsacvwfigsvt.supabase.co"
+const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY2OTE4NzcsImV4cCI6MjA4MjI2Nzg3N30.PhuNnwzQ8cZW_UyUjCxXaYAj7xCCiTnOJVd4fUtQRD8"
+const supabase = createClient(SUPABASE_URL, SUPABASE_ANON_KEY)
 
-  const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+const wojSelect = document.getElementById('wojewodztwo')
+const miastoSelect = document.getElementById('miasto')
+const tbody = document.querySelector('#wyniki tbody')
+const empty = document.getElementById('empty')
 
-  const wojSelect = document.getElementById('wojewodztwo');
-  const miastoSelect = document.getElementById('miasto');
-  const tbody = document.querySelector('#wyniki tbody');
-  const empty = document.getElementById('empty');
-  const szukajBtn = document.getElementById('szukajBtn');
+// Wczytaj województwa
+async function loadWojewodztwa() {
+  const { data, error } = await supabase.from('wojewodztwa').select('id,nazwa').order('nazwa')
+  if (error) { console.error(error); return }
+  data.forEach(w => {
+    const option = document.createElement('option')
+    option.value = w.id
+    option.textContent = w.nazwa
+    wojSelect.appendChild(option)
+  })
+}
 
-  async function loadWojewodztwa() {
-    const { data, error } = await supabase.from('wojewodztwa').select('id,nazwa').order('nazwa');
-    if (error) { console.error(error); return; }
-    data.forEach(w => {
-      const option = document.createElement('option');
-      option.value = w.id; // liczba
-      option.textContent = w.nazwa;
-      wojSelect.appendChild(option);
-    });
+// Wczytaj miasta po województwie
+wojSelect.addEventListener('change', async () => {
+  const wojId = wojSelect.value
+  miastoSelect.innerHTML = '<option value="">-- wybierz --</option>'
+  miastoSelect.disabled = true
+  if (!wojId) return
+
+  const { data, error } = await supabase.from('miasta')
+    .select('id,nazwa')
+    .eq('wojewodztwo_id', wojId)
+    .order('nazwa')
+  if (error) { console.error(error); return }
+
+  data.forEach(m => {
+    const option = document.createElement('option')
+    option.value = m.id   // <--- używamy ID, działa na komputerze i telefonie
+    option.textContent = m.nazwa
+    miastoSelect.appendChild(option)
+  })
+  miastoSelect.disabled = false
+})
+
+async function szukaj() {
+  const wojId = parseInt(wojSelect.value)        // <--- konwersja na number
+  const miastoId = parseInt(miastoSelect.value)  // <--- konwersja na number
+  tbody.innerHTML = ''
+
+  if (!wojId || !miastoId) {
+    empty.textContent = 'Proszę wybrać województwo i miasto'
+    empty.style.display = 'block'
+    return
   }
 
-  wojSelect.addEventListener('change', async () => {
-    const wojId = parseInt(wojSelect.value);
-    console.log('Wybrano województwo ID:', wojId);
-    miastoSelect.innerHTML = '<option value="">-- wybierz --</option>';
-    miastoSelect.disabled = true;
-    if (!wojId) return;
+  const { data, error } = await supabase.from('tabela_elektrykow')
+    .select('imie,nazwisko,email,telefon,gwiazdki')
+    .eq('wojewodztwo', wojId)
+    .eq('miasto', miastoId)
 
-    const { data, error } = await supabase.from('miasta')
-      .select('id,nazwa')
-      .eq('wojewodztwo_id', wojId)
-      .order('nazwa');
-
-    if (error) { console.error(error); return; }
-
-    data.forEach(m => {
-      const option = document.createElement('option');
-      option.value = m.id; // liczba
-      option.textContent = m.nazwa;
-      miastoSelect.appendChild(option);
-    });
-    miastoSelect.disabled = false;
-    console.log('Załadowano miasta:', data);
-  });
-
-  async function szukaj() {
-    const wojId = parseInt(wojSelect.value);
-    const miastoId = parseInt(miastoSelect.value);
-    tbody.innerHTML = '';
-    console.log('Szukam dla województwa ID:', wojId, 'miasto ID:', miastoId);
-
-    if (!wojId || !miastoId) {
-      empty.textContent = 'Proszę wybrać województwo i miasto';
-      empty.style.display = 'block';
-      return;
-    }
-
-    const { data, error } = await supabase.from('tabela_elektrykow')
-      .select('imie,nazwisko,email,telefon,gwiazdki')
-      .eq('wojewodztwo', wojId)
-      .eq('miasto', miastoId);
-
-    console.log('Wyniki z bazy:', data);
-
-    if (error) {
-      empty.textContent = 'Błąd pobierania danych: ' + error.message;
-      empty.style.display = 'block';
-      return;
-    }
-
-    if (!data || data.length === 0) {
-      empty.textContent = 'Brak wyników dla wybranego województwa i miasta';
-      empty.style.display = 'block';
-      return;
-    }
-
-    data.forEach(e => {
-      const tr = document.createElement('tr');
-      tr.innerHTML = `
-        <td>${e.imie}</td>
-        <td>${e.nazwisko}</td>
-        <td>${e.email}</td>
-        <td>${e.telefon}</td>
-        <td>${e.gwiazdki}</td>
-      `;
-      tbody.appendChild(tr);
-    });
-
-    empty.style.display = 'none';
+  if (error) {
+    empty.textContent = 'Błąd pobierania danych: ' + error.message
+    empty.style.display = 'block'
+    return
   }
 
-  szukajBtn.addEventListener('click', szukaj);
+  if (!data || data.length === 0) {
+    empty.textContent = 'Brak wyników dla wybranego województwa i miasta'
+    empty.style.display = 'block'
+    return
+  }
 
-  // inicjalizacja
-  loadWojewodztwa();
+  data.forEach(e => {
+    const tr = document.createElement('tr')
+    tr.innerHTML = `
+      <td>${e.imie}</td>
+      <td>${e.nazwisko}</td>
+      <td>${e.email}</td>
+      <td>${e.telefon}</td>
+      <td>${e.gwiazdki}</td>
+    `
+    tbody.appendChild(tr)
+  })
 
-});
+  empty.style.display = 'none'
+}
+
+// inicjalizacja
+loadWojewodztwa()
+window.szukaj = szukaj
+
 </script>
 </body>
 </html>
