--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -20,7 +20,7 @@
     body { margin:0; font-family: Arial,sans-serif; background:var(--bg); color:var(--text);}
     header { background:linear-gradient(135deg,#0B5FA5,#083f6b); color:white; padding:40px 20px; }
     .header-container { max-width:1200px; margin:0 auto; display:flex; align-items:center; gap:20px; }
-    .logo { width: 55px; display: block; }
+      .logo { width: 55px; display: block; }
     .header-text h1 { margin:0; font-size:28px; }
     .header-text p { margin:6px 0 0; opacity:0.9; }
 
@@ -31,12 +31,13 @@
     select, button { width:100%; padding:12px; font-size:15px; border-radius:8px; border:1px solid #d1d5db; }
     button { background-color: var(--primary); color:white; border:none; cursor:pointer; font-weight:bold; }
     button:hover { opacity:0.9; }
-    .results-card { background: var(--card); border-radius:12px; padding:20px; box-shadow:0 6px 20px rgba(0,0,0,0.06); }
+    .results-card { background: var(--card); border-radius:12px; padding:20px; box-shadow:0 6px 20px rgba(0,0,0,0.06); margin-bottom:20px; }
     table { width:100%; border-collapse:collapse; }
     th, td { padding:14px 10px; text-align:left; border-bottom:1px solid #e5e7eb; }
     th { font-size:14px; color:var(--muted); }
     .stars { color:#f5b301; font-size:16px; }
     .empty { text-align:center; padding:30px; color:var(--muted); }
+    #log { background: #eef; border:1px solid #99c; padding:10px; margin-top:10px; font-size:12px; white-space:pre-wrap; }
     @media(max-width:600px) { .header-container { flex-direction:column; align-items:flex-start; } }
   </style>
 </head>
@@ -87,6 +88,7 @@
       <tbody></tbody>
     </table>
     <div id="empty" class="empty">Wybierz województwo i miasto, aby zobaczyć wyniki</div>
+    <div id="log"></div>
   </div>
 </main>
 
@@ -101,11 +103,12 @@ const wojSelect = document.getElementById('wojewodztwo')
 const miastoSelect = document.getElementById('miasto')
 const tbody = document.querySelector('#wyniki tbody')
 const empty = document.getElementById('empty')
+const logDiv = document.getElementById('log')
 
 // Wczytaj województwa
 async function loadWojewodztwa() {
   const { data, error } = await supabase.from('wojewodztwa').select('id,nazwa').order('nazwa')
-  if (error) { console.error(error); return }
+  if (error) { logDiv.textContent += 'Błąd ładowania województw: ' + error.message + '\n'; return }
   data.forEach(w => {
     const option = document.createElement('option')
     option.value = w.id
@@ -116,34 +119,33 @@ async function loadWojewodztwa() {
 
 // Wczytaj miasta po województwie
 wojSelect.addEventListener('change', async () => {
-  const wojId = Number(wojSelect.value)  // KONWERSJA NA LICZBĘ
-  console.log('Wybrano województwo ID:', wojId)
+  const wojId = wojSelect.value
+  logDiv.textContent += 'Wybrano województwo ID: ' + wojId + '\n'
   miastoSelect.innerHTML = '<option value="">-- wybierz --</option>'
   miastoSelect.disabled = true
   if (!wojId) return
 
   const { data, error } = await supabase.from('miasta')
     .select('id,nazwa')
-    .eq('wojewodztwo_id', wojId)
+    .eq('wojewodztwo_id', Number(wojId))
     .order('nazwa')
-  if (error) { console.error(error); return }
+  if (error) { logDiv.textContent += 'Błąd ładowania miast: ' + error.message + '\n'; return }
 
   data.forEach(m => {
     const option = document.createElement('option')
-    option.value = Number(m.id)  // KONWERSJA NA LICZBĘ
+    option.value = m.id
     option.textContent = m.nazwa
     miastoSelect.appendChild(option)
   })
   miastoSelect.disabled = false
-  console.log('Załadowano miasta:', data)
+  logDiv.textContent += 'Załadowano miasta: ' + JSON.stringify(data) + '\n'
 })
 
 async function szukaj() {
-  const wojId = Number(wojSelect.value)  // KONWERSJA NA LICZBĘ
-  const miastoId = Number(miastoSelect.value)  // KONWERSJA NA LICZBĘ
+  const wojId = Number(wojSelect.value)
+  const miastoId = Number(miastoSelect.value)
   tbody.innerHTML = ''
-
-  console.log('Szukam dla województwa ID:', wojId, 'miasto ID:', miastoId)
+  logDiv.textContent += 'Szukam dla województwa ID: ' + wojId + ', miasto ID: ' + miastoId + '\n'
 
   if (!wojId || !miastoId) {
     empty.textContent = 'Proszę wybrać województwo i miasto'
@@ -156,7 +158,7 @@ async function szukaj() {
     .eq('wojewodztwo', wojId)
     .eq('miasto', miastoId)
 
-  console.log('Wyniki z bazy:', data)
+  logDiv.textContent += 'Wyniki z bazy: ' + JSON.stringify(data) + '\n'
 
   if (error) {
     empty.textContent = 'Błąd pobierania danych: ' + error.message
